Moved model settings to settings.settings

--- a/ChatGPT/App.config
+++ b/ChatGPT/App.config
@@ -30,6 +30,9 @@
             <setting name="BTNMONGO" serializeAs="String">
                 <value>Run as MONGO</value>
             </setting>
+            <setting name="model" serializeAs="String">
+                <value>gpt-3.5-turbo</value>
+            </setting>
         </ChatGPT.My.MySettings>
     </userSettings>
 </configuration>
