Added language support

--- a/ChatGPT/App.config
+++ b/ChatGPT/App.config
@@ -33,6 +33,9 @@
             <setting name="model" serializeAs="String">
                 <value>gpt-3.5-turbo</value>
             </setting>
+            <setting name="language" serializeAs="String">
+                <value>Dutch</value>
+            </setting>
         </ChatGPT.My.MySettings>
     </userSettings>
 </configuration>
