--- a/ChatGPT/My Project/Settings.settings
+++ b/ChatGPT/My Project/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="model" Type="System.String" Scope="User">
       <Value Profile="(Default)">gpt-3.5-turbo</Value>
     </Setting>
+    <Setting Name="language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Dutch</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
