Partialy implemented modify values in dropdown

--- a/ChatGPT/App.config
+++ b/ChatGPT/App.config
@@ -36,6 +36,15 @@
             <setting name="language" serializeAs="String">
                 <value>Dutch</value>
             </setting>
+            <setting name="ACT" serializeAs="String">
+                <value>Accountant,Advertiser,Analyst,Best selling author,Chief financial officer,Copywriter,Ghostwriter,Inventor,Journalist,Lawyer,Marketer,Mindset Coach,Project manager,Prompt engineer,Therapist,Website designer</value>
+            </setting>
+            <setting name="CREATE" serializeAs="String">
+                <value>Ad copy,Analysis,Article,Blog post,Book outline,Cover letter,Email sequence,Essay,Headline,Product description,Recipe,Sales copy,SEO keywords,Social media post,Summary,Video script</value>
+            </setting>
+            <setting name="SHOW" serializeAs="String">
+                <value>A list,A table,Code,CSV file,Gannt chart,Graphs,HTML,JSON,Markdown,PDF,Plain text file,Rich text,Spreadsheet,Summary,Word Cloud,XML</value>
+            </setting>
         </ChatGPT.My.MySettings>
     </userSettings>
 </configuration>
