--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '7.0.306' 
+
+    - name: Restore dependencies
+      run: dotnet restore ChatGPT.sln
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
