--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.306' 
+        dotnet-version: '7.0.306'
 
     - name: Restore dependencies
       run: dotnet restore ChatGPT.sln
@@ -27,3 +27,9 @@ jobs:
 
     - name: Build project
       run: msbuild ChatGPT.sln /p:Configuration=Release
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-output
+        path: ChatGPT/bin/Release/*
