--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,19 @@ jobs:
         dotnet-version: '7.0.306'
 
     - name: Restore dependencies
-      run: dotnet restore ChatGPT.sln
+      run: dotnet restore ChatGPT-winapp-vb/ChatGPT.sln
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project
-      run: msbuild ChatGPT.sln /p:Configuration=Release
+      run: msbuild ChatGPT-winapp-vb/ChatGPT.sln /p:Configuration=Release
+
+    - name: List contents of output directory
+      run: dir ChatGPT-winapp-vb/ChatGPT/bin/Release/net6.0-windows/
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
         name: build-output
-        path: ./ChatGPT/bin/Release/net6.0-windows/*
+        path: ChatGPT-winapp-vb/ChatGPT/bin/Release/net6.0-windows/*
