--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         dotnet-version: '7.0.306'
 
     - name: Restore dependencies
-      run: dotnet restore ChatGPT-winapp-vb/ChatGPT.sln
+      run: dotnet restore ChatGPT.sln
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
