--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project
-      run: msbuild ChatGPT-winapp-vb/ChatGPT.sln /p:Configuration=Release
+      run: msbuild ChatGPT.sln /p:Configuration=Release
 
     - name: List contents of output directory
       run: dir ChatGPT-winapp-vb/ChatGPT/bin/Release/net6.0-windows/
