--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,13 @@ jobs:
 
     - name: Build project
       run: msbuild ChatGPT.sln /p:Configuration=Release
+      
+    - name: Copy translations directory
+      run: Copy-Item -Path ./ChatGPT/translations -Destination ./ChatGPT/bin/Release/net6.0-windows/translations -Recurse
 
+    - name: List all files in the bin directory
+      run: dir ./ChatGPT/bin/Release/net6.0-windows/
+      
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
